objects/DMAPP__Call_Plan_Objective__c.object
<CustomObject>
    <fields>
        <fullName>DMAPP__Achieved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Achieved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__Call_Plan__c</fullName>
        <label>Call Plan</label>
        <referenceTo>DMAPP__Call_Plan__c</referenceTo>
        <relationshipLabel>Call Plan Objectives</relationshipLabel>
        <relationshipName>Call_Plan_Objectives</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DMAPP__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMAPP__Order__c</fullName>
        <label>Order</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMAPP__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Optimal</fullName>
                    <default>true</default>
                    <label>Optimal</label>
                </value>
                <value>
                    <fullName>Minimal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Call Plan Objective</label>
    <nameField>
        <label>Call Plan Objectives Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Call Plan Objectives</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>